// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function with a bucket binding requiring only read 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { await this.bucket.get(\\"hello.txt\\"); }
};
})())({
bucket: new (require(\\"[REDACTED]/wingsdk/src/target-tf-azure/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME_e51fbb13\\"], process.env[\\"STORAGE_ACCOUNT_e51fbb13\\"])
})"
`;

exports[`function with a bucket binding requiring only read 2`] = `
"{
  \\"resource\\": {
    \\"azurerm_linux_function_app\\": {
      \\"root_Function_9E43762E\\": {
        \\"app_settings\\": {
          \\"BUCKET_NAME_e51fbb13\\": \\"\${azurerm_storage_container.root_Bucket_D7A55221.name}\\",
          \\"FUNCTIONS_WORKER_RUNTIME\\": \\"node\\",
          \\"STORAGE_ACCOUNT_e51fbb13\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
          \\"WEBSITE_RUN_FROM_PACKAGE\\": \\"https://\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}.blob.core.windows.net/\${azurerm_storage_container.root_Function_FunctionBucket_B5F263FB.name}/\${azurerm_storage_blob.root_Function_CodeBlob_5AAEAFFA.name}\\"
        },
        \\"https_only\\": true,
        \\"identity\\": {
          \\"type\\": \\"SystemAssigned\\"
        },
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"function-c852aba6\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"service_plan_id\\": \\"\${azurerm_service_plan.root_ServicePlan_14459C66.id}\\",
        \\"site_config\\": {
          \\"application_stack\\": {
            \\"node_version\\": \\"16\\"
          }
        },
        \\"storage_account_access_key\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.primary_access_key}\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    },
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_role_assignment\\": {
      \\"root_Function_ReadLambdaCodeAssignment_01DCF214\\": {
        \\"principal_id\\": \\"\${azurerm_linux_function_app.root_Function_9E43762E.identity[0].principal_id}\\",
        \\"role_definition_name\\": \\"Storage Blob Data Reader\\",
        \\"scope\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.id}\\"
      },
      \\"root_Function_RoleAssignmentc88fdc5f491a51d8438235500a4821fbc31357ca3aStorageBlobDataReader_75AC342F\\": {
        \\"principal_id\\": \\"\${azurerm_linux_function_app.root_Function_9E43762E.identity[0].principal_id}\\",
        \\"role_definition_name\\": \\"Storage Blob Data Reader\\",
        \\"scope\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.id}\\"
      }
    },
    \\"azurerm_service_plan\\": {
      \\"root_ServicePlan_14459C66\\": {
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"Default-c82bf964\\",
        \\"os_type\\": \\"Linux\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"sku_name\\": \\"Y1\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_blob\\": {
      \\"root_Function_CodeBlob_5AAEAFFA\\": {
        \\"name\\": \\"function-c852aba6.zip\\",
        \\"source\\": \\"<source>\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
        \\"storage_container_name\\": \\"\${azurerm_storage_container.root_Function_FunctionBucket_B5F263FB.name}\\",
        \\"type\\": \\"Block\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_Bucket_D7A55221\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"bucket-c88fdc5f\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      },
      \\"root_Function_FunctionBucket_B5F263FB\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"functionbucket-c8ccf7e8\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`function with a bucket binding requiring read_write 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { await this.bucket.put(\\"hello.txt\\", event); }
};
})())({
bucket: new (require(\\"[REDACTED]/wingsdk/src/target-tf-azure/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME_e51fbb13\\"], process.env[\\"STORAGE_ACCOUNT_e51fbb13\\"])
})"
`;

exports[`function with a bucket binding requiring read_write 2`] = `
"{
  \\"resource\\": {
    \\"azurerm_linux_function_app\\": {
      \\"root_Function_9E43762E\\": {
        \\"app_settings\\": {
          \\"BUCKET_NAME_e51fbb13\\": \\"\${azurerm_storage_container.root_Bucket_D7A55221.name}\\",
          \\"FUNCTIONS_WORKER_RUNTIME\\": \\"node\\",
          \\"STORAGE_ACCOUNT_e51fbb13\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
          \\"WEBSITE_RUN_FROM_PACKAGE\\": \\"https://\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}.blob.core.windows.net/\${azurerm_storage_container.root_Function_FunctionBucket_B5F263FB.name}/\${azurerm_storage_blob.root_Function_CodeBlob_5AAEAFFA.name}\\"
        },
        \\"https_only\\": true,
        \\"identity\\": {
          \\"type\\": \\"SystemAssigned\\"
        },
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"function-c852aba6\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"service_plan_id\\": \\"\${azurerm_service_plan.root_ServicePlan_14459C66.id}\\",
        \\"site_config\\": {
          \\"application_stack\\": {
            \\"node_version\\": \\"16\\"
          }
        },
        \\"storage_account_access_key\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.primary_access_key}\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    },
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_role_assignment\\": {
      \\"root_Function_ReadLambdaCodeAssignment_01DCF214\\": {
        \\"principal_id\\": \\"\${azurerm_linux_function_app.root_Function_9E43762E.identity[0].principal_id}\\",
        \\"role_definition_name\\": \\"Storage Blob Data Reader\\",
        \\"scope\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.id}\\"
      },
      \\"root_Function_RoleAssignmentc88fdc5f491a51d8438235500a4821fbc31357ca3aStorageBlobDataContributor_DD478695\\": {
        \\"principal_id\\": \\"\${azurerm_linux_function_app.root_Function_9E43762E.identity[0].principal_id}\\",
        \\"role_definition_name\\": \\"Storage Blob Data Contributor\\",
        \\"scope\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.id}\\"
      }
    },
    \\"azurerm_service_plan\\": {
      \\"root_ServicePlan_14459C66\\": {
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"Default-c82bf964\\",
        \\"os_type\\": \\"Linux\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"sku_name\\": \\"Y1\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_blob\\": {
      \\"root_Function_CodeBlob_5AAEAFFA\\": {
        \\"name\\": \\"function-c852aba6.zip\\",
        \\"source\\": \\"<source>\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
        \\"storage_container_name\\": \\"\${azurerm_storage_container.root_Function_FunctionBucket_B5F263FB.name}\\",
        \\"type\\": \\"Block\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_Bucket_D7A55221\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"bucket-c88fdc5f\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      },
      \\"root_Function_FunctionBucket_B5F263FB\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"functionbucket-c8ccf7e8\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;
